<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded"
    android:paddingBottom="@dimen/text_input_padding">


    <TextView
        android:id="@+id/text_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_light"
        android:padding="20dp"
        android:text="@string/warning"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prompt"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/deleting_your_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />


    <Button
        android:id="@+id/confirm_btn"
        style="@style/Widget.App.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/window_margin"
        android:layout_marginRight="@dimen/window_margin"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/button_padding"
        android:text="@string/i_confirm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt" />

</androidx.constraintlayout.widget.ConstraintLayout>