<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded"
    android:paddingBottom="@dimen/text_input_padding">

    <Button
        android:id="@+id/select_btn"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="@dimen/window_margin"
        android:layout_marginRight="@dimen/window_margin"
        android:backgroundTint="@color/green_dark"
        android:padding="@dimen/button_padding"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/prompt_1"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/volunteer_prompt_select_bus"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_name"
        android:paddingLeft="@dimen/window_margin"
        android:paddingRight="@dimen/window_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt_1"
        app:startIconDrawable="@drawable/ic_bus"
        app:startIconTint="@color/black">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:padding="@dimen/text_input_padding"
            android:textAppearance="@style/TextAppearance.App.Subtitle1.Light"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/prompt"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingLeft="@dimen/window_margin"
        android:paddingRight="@dimen/window_margin"
        android:text="@string/volunteer_prompt_phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_name" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_light"
        android:padding="20dp"
        android:text="@string/become_a_volunteer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone"
        android:paddingLeft="@dimen/window_margin"
        android:paddingRight="@dimen/window_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prompt"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="@dimen/text_input_padding"
            android:textAppearance="@style/TextAppearance.App.Subtitle1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_btn"
        app:srcCompat="@drawable/ic_circle"
        app:tint="@color/light_ash_dark" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toTopOf="@+id/imageView1"
        app:srcCompat="@drawable/ic_circle" />
</androidx.constraintlayout.widget.ConstraintLayout>



