<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".auth.ForgotPasswordActivity"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_txt"
            app:trackColor="@color/orange" />

        <TextView
            android:id="@+id/signup_txt"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_dark"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="@string/forgot_password_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edu_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_institutional_email"
            android:paddingLeft="@dimen/item_spacing_large"
            android:paddingTop="15dp"
            android:paddingRight="@dimen/item_spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_input_padding"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:textAppearance="@style/TextAppearance.App.Subtitle1"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sendBtn"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_spacing_large"
            android:layout_marginTop="@dimen/item_spacing"
            android:layout_marginRight="@dimen/item_spacing_large"
            android:backgroundTint="@color/yellow_light"
            android:onClick="onSendClick"
            android:padding="@dimen/button_padding"
            android:paddingLeft="@dimen/item_spacing_large"
            android:paddingRight="@dimen/item_spacing_large"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edu_mail" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextAppearance.App.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/item_spacing_large"
            android:paddingTop="@dimen/item_spacing_large"
            android:paddingEnd="@dimen/item_spacing_large"
            android:text="@string/forgot_pass_caption"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_txt" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onReturnClick"
            android:text="@string/return_back"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/sendBtn"
            app:layout_constraintStart_toStartOf="@+id/sendBtn"
            app:layout_constraintTop_toBottomOf="@+id/sendBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
